--- a/02-frontend/tsconfig.json
+++ b/02-frontend/tsconfig.json
@@ -26,6 +26,7 @@
     "strictInputAccessModifiers": true,
     "strictTemplates": true,
     "strictPropertyInitialization": false,
-    "strictFunctionTypes": false
+    "strictFunctionTypes": false,
+    "strictDomEventTypes": false
   }
 }
